--- a/notebooks/051420_QuantStudio_RT-qPCR_.ipynb
+++ b/notebooks/051420_QuantStudio_RT-qPCR_.ipynb
@@ -211,6 +211,7 @@
     "    \n",
     "plt.legend()\n",
     "plt.title('N1 Primers', fontsize=12)\n",
+    "plt.savefig('figs/051420/N1_primers.png')\n",
     "plt.show()"
    ]
   },
@@ -244,6 +245,7 @@
     "\n",
     "plt.title('N2 Primers', fontsize=12)\n",
     "plt.legend()\n",
+    "plt.savefig('figs/051420/N2_primers.png')\n",
     "plt.show()"
    ]
   },
